feat: add jam-nodes-editor visual workflow editor
- React Flow v12 canvas with drag-and-drop from node palette
- Custom nodes with typed input/output ports from Zod schemas
- Auto-generated config panel from Zod inputSchema
- Dark theme UI with category-colored nodes and glowing accents
- Toolbar: export/import JSON, undo/redo, zoom controls
- Zod schema introspector for field extraction
- Dev app with all built-in nodes registered
- README with usage docs and library embedding guide

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "tsx test.ts",
     "lint": "npm run lint --workspaces --if-present",
     "clean": "npm run clean --workspaces --if-present",
-    "typecheck": "npm run typecheck --workspaces --if-present"
+    "typecheck": "npm run typecheck --workspaces --if-present",
+    "editor": "cd packages/editor && npm run dev"
   },
   "repository": {
     "type": "git",
