--- a/packages/nodes/package.json
+++ b/packages/nodes/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.5",
   "description": "Built-in workflow nodes for jam-nodes framework",
   "type": "module",
+  "sideEffects": false,
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
